--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:f8DYHwqQGtvWH6SqAeAK1EUwlEbgLqCSiF9RUiKXO6U=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://entDigitalLife.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
